...
    Scaffold(
        floatingActionButton = {
            FloatingActionButton(
                onClick = {
                    event(NoteListScreenEvent.CreateNoteClick)
                },
                modifier = Modifier.testTag("Create Button")
            ) {
                Icon(Icons.Filled.Add, null)
            }
        }
    ) { innerPadding ->
        LazyColumn(
...
